Update API_BASE URL in index.html

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   <script>
     // !! ใส่ URL web app ของคุณตรงนี้ !!
-    const API_BASE = 'PASTE_YOUR_SCRIPT_URL_HERE'; 
+    const API_BASE = 'https://script.google.com/macros/s/AKfycbxu6_dJgob1StmOGe5yVD5Os3T0YpXWW9yE8NAIPShNiHntNz6rG9F_CzJsRQ9Ill47ig/exec'; 
     // example: 'https://script.google.com/macros/s/AKfycby....../exec'
 
     async function fetchOrders() {
